# pyopp_release_deploy_cd

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
.github/workflows/: README.md  build-wheels-rust.yml  ci.yml  conda-publish.yml  docker-build.yml  pypi-publish.yml
builds/spack/: README.md  package.py
managers/apt/: Dockerfile  README.md  build-deb.sh
managers/apt/debian/: changelog  control  copyright  rules
managers/conda/: README.md  grayskull-example.md  publish-anaconda.md  publish-conda-forge.md
managers/conda/example/: meta.yaml
managers/conda/hello-numpy/: meta.yaml
managers/conda/recipe/hello_numpy/: meta.yaml
managers/docker/: Dockerfile  README.md
managers/homebrew/: Dockerfile  README.md  hello-numpy.rb  hello_numpy.rb
managers/homebrew/hello_numpy/: pyproject.toml
managers/pypi/: README.md  build-and-upload.sh
managers/spack/: README.md  package.py
